--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,23 @@ spring.ai.vectorstore.milvus.index-type=IVF_FLAT
 spring.ai.vectorstore.milvus.metric-type=COSINE
 spring.ai.vectorstore.milvus.initialize-schema=true
 
+# Habilitar el modelo de voz de OpenAI (por defecto es openai)
+spring.ai.model.audio.speech=openai
+
+# Configuración por defecto del TTS; puedes ajustarla a tu gusto
+spring.ai.openai.audio.speech.options.model=tts-1
+spring.ai.openai.audio.speech.options.voice=alloy
+spring.ai.openai.audio.speech.options.response-format=mp3
+spring.ai.openai.audio.speech.options.speed=1.0
+
 # Optional: increase similarity threshold for retrieval.  A lower value
 # returns more documents; a higher value returns only very similar
 # documents.  You can tune this value based on your use case.
 #spring.ai.rag.similarity-threshold=0.5
+
+spring.ai.retry.max-attempts=3
+spring.ai.retry.backoff.initial-interval=2s
+spring.ai.retry.backoff.multiplier=2
+spring.ai.retry.backoff.max-interval=10s
 
 
