feat: add new image summary endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.application.name=spring-ai-adventure
 spring.ai.openai.api-key=${OPENAI_API_KEY:}
 spring.ai.openai.model=gpt-4o
 
+spring.ai.openai.image.options.size= 1024x1024
+spring.ai.openai.image.options.quality= standard
+spring.ai.openai.image.options.response_format= b64_json
+
 # Reduce logging noise
 logging.level.org.springframework.ai=INFO
 logging.level.com.example=DEBUG
