--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,26 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- 🔥 Swagger / OpenAPI (SpringDoc) -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <!-- Asegura la resolución de recursos webjars en Spring Boot 3 -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator-core</artifactId>
+            <version>0.58</version>
+        </dependency>
+
+        <!-- UI estática de Swagger (por si el starter no la trae en tu setup) -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>swagger-ui</artifactId>
+            <version>5.17.14</version>
+        </dependency>
+
         <!-- Spring Boot test dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
