--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.application.name=spring-ai-adventure
 spring.ai.openai.api-key=${OPENAI_API_KEY:}
 spring.ai.openai.model=gpt-4o
 
-spring.ai.openai.image.options.size= 1024x1024
-spring.ai.openai.image.options.quality= standard
-spring.ai.openai.image.options.response_format= b64_json
+spring.ai.openai.image.options.size=1024x1024
+spring.ai.openai.image.options.quality=standard
+spring.ai.openai.image.options.response_format=b64_json
 
 # Reduce logging noise
 logging.level.org.springframework.ai=INFO
@@ -51,5 +51,13 @@ spring.ai.retry.max-attempts=3
 spring.ai.retry.backoff.initial-interval=2s
 spring.ai.retry.backoff.multiplier=2
 spring.ai.retry.backoff.max-interval=10s
+
+# OpenAPI JSON (ya te funciona)
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.enabled=true
+
+
+
 
 
